# Abnormal-Situation-Detection

./: .gitignore  README.md
3_Code/Map_Base_Anomaly/map_trainer/: map_evt_cnn_trainer.py
3_Code/Map_Base_Anomaly/map_visualize/: osr_status_plot.py
3_Code/OSR_abnormal_detecction/: README.md
3_Code/OSR_abnormal_detecction/Map_Base_Anomaly/: README.md
3_Code/OSR_abnormal_detecction/Map_Base_Anomaly/abnormal_map_generator/: README.md
3_Code/OSR_abnormal_detecction/Map_Base_Anomaly/map_trainer/: README.md  map_mtn_ae_trainer.py  map_prb_trainer.py
3_Code/OSR_abnormal_detecction/Map_Base_Anomaly/map_visualize/: osr_statusDB_visualize.py
3_Code/OSR_abnormal_detecction/Moving_camera_anomaly_detection/: README.md
3_Code/OSR_abnormal_detecction/OSR_ped_anomaly/: README.md  frame_extract.py
3_Code/OSR_abnormal_detecction/OSR_ped_anomaly/src/: model_anomaly.py
3_Code/OSR_base/: README.md
3_Code/OSR_base/osr/: README.md
3_Code/OSR_base/osr/osr_abnormals/: CMakeLists.txt
3_Code/OSR_base/osr/osr_abnormals/include/osr_abnormals/: agent_info_viewer.h
3_Code/OSR_base/osr/osr_abnormals/launch/: user_defined_abnormal.launch
3_Code/OSR_base/osr/osr_abnormals/src/: agent_info_viewer.cpp  agent_info_viewer_node.cpp  user_defined_abnormal.cpp
3_Code/OSR_base/osr/osr_comm/: CMakeLists.txt  package.xml
3_Code/OSR_base/osr/osr_comm/include/osr_comm/: comm.h  packets.h  parsers.h
3_Code/OSR_base/osr/osr_comm/launch/: abnormals_receiver.launch  abnormals_sender.launch
3_Code/OSR_base/osr/osr_comm/src/: comm.cpp  packets.cpp  parsers.cpp
3_Code/OSR_base/osr/osr_demos/: CMakeLists.txt  package.xml
3_Code/OSR_base/osr/osr_demos/launch/: abnormals_receiver.launch  abnormals_receiver_multiport.launch  abnormals_sender.launch  abnormals_sender_multiport.launch  change_image_receiver.launch  change_image_receiver_multiport.launch  change_image_sender.launch  change_image_sender_multiport.launch
3_Code/OSR_base/osr/osr_demos/launch/kiro/: kiro_abnormals_receiver_multiport.launch  kiro_change_image_receiver_multiport.launch  kiro_fixed_abnormals_sender_multiport.launch  kiro_fixed_change_image_sender_multiport.launch  kiro_mobile_abnormals_sender_multiport.launch  kiro_mobile_change_image_sender_multiport.launch
3_Code/OSR_base/osr/osr_demos/launch/redone/: redone_abnormals_receiver_multiport.launch  redone_change_image_receiver_multiport.launch  redone_fixed_abnormals_sender_multiport.launch  redone_fixed_change_image_sender_multiport.launch  redone_mobile_abnormals_sender_multiport.launch  redone_mobile_change_image_sender_multiport.launch
3_Code/OSR_base/osr/osr_demos/scripts/: pose_image_saver.py
3_Code/OSR_base/osr/osr_demos/src/: abnormals_receiver.cpp  abnormals_receiver_multiport.cpp  abnormals_sender.cpp  abnormals_sender_multiport.cpp  change_image_receiver.cpp  change_image_receiver_multiport.cpp  change_image_sender.cpp  change_image_sender_multiport.cpp
3_Code/OSR_base/osr_map/: README.md
3_Code/OSR_base/osr_map/osr_map_agents/: CMakeLists.txt  package.xml
3_Code/OSR_base/osr_map/osr_map_agents/config/: fixed_agent.rviz  fixed_agent.yaml  mobile_agent.rviz
3_Code/OSR_base/osr_map/osr_map_agents/include/osr_map_agents/: se3.hpp  virtual_camera.hpp
3_Code/OSR_base/osr_map/osr_map_agents/include/osr_map_agents/map_layers/: elevation_layer.h  fixed_elevation_layer.h  fixed_object_layer.h  object_layer.h  thermal_layer.h
3_Code/OSR_base/osr_map/osr_map_agents/launch/: fixed_multiport.launch  mobile.launch  mobile_multiport.launch
3_Code/OSR_base/osr_map/osr_map_agents/launch/kiro/: kiro_fixed_8_multiport.launch  kiro_fixed_9_multiport.launch  kiro_fixed_multiport.launch  kiro_mobile_1_multiport.launch  kiro_mobile_2_multiport.launch  kiro_mobile_3_multiport.launch  kiro_mobile_4_multiport.launch  kiro_mobile_5_multiport.launch  kiro_mobile_6_multiport.launch
3_Code/OSR_base/osr_map/osr_map_agents/launch/redone/: redone_fixed_7_multiport.launch  redone_fixed_8_multiport.launch  redone_fixed_9_multiport.launch  redone_mobile_1_multiport.launch  redone_mobile_2_multiport.launch  redone_mobile_3_multiport.launch  redone_mobile_4_multiport.launch  redone_mobile_5_multiport.launch  redone_mobile_6_multiport.launch
3_Code/OSR_base/osr_map/osr_map_agents/src/: fixed_object_layer_node.cpp  osr_map_agent_multiport_node.cpp  osr_map_agent_node.cpp  se3.cpp  thermal_layer_node.cpp  virtual_camera.cpp
3_Code/OSR_base/osr_map/osr_map_agents/src/map_layers/: fixed_elevation_layer.cpp  fixed_object_layer.cpp  object_layer.cpp  thermal_layer.cpp
3_Code/OSR_ped_anomaly/: frame_extract.py  model_anomaly.py  ped_node.py
3_Code/osr_public_v0.5/osr_map/: README.md
3_Code/osr_public_v0.5/osr_map/osr/osr_abnormals/: package.xml
3_Code/osr_public_v0.5/osr_map/osr/osr_abnormals/include/osr_abnormals/: user_defined_abnormal.h
3_Code/osr_public_v0.5/osr_map/osr/osr_abnormals/src/: user_defined_abnormal_node.cpp
3_Code/osr_public_v0.5/osr_map/osr_map/osr_map_comm/: CMakeLists.txt  package.xml
3_Code/osr_public_v0.5/osr_map/osr_map/osr_map_comm/include/osr_map_comm/: comp_converter.h
3_Code/osr_public_v0.5/osr_map/osr_map/osr_map_demos/: package.xml
3_Code/osr_public_v0.5/osr_map/osr_map/osr_map_demos/launch/: image_to_gridmap_demo.launch
3_Code/osr_public_v0.5/osr_map/osr_map/osr_map_demos/rviz/: osr_map_demo.rviz
3_Code/osr_public_v0.5/osr_map/osr_map/osr_map_demos/src/: image_to_gridmap_node.cpp
osr_public_v0.5/osr_abnormal_detection/abnormal_sound_detection/: realtime_inference_4ch_direction_classification.py
osr_public_v0.5/osr_map/osr_map/osr_map_demos/: CMakeLists.txt
osr_public_v0.5/osr_map/osr_map/osr_map_demos/include/osr_map_demos/: image_to_gridmap.h
osr_public_v0.5/osr_map/osr_map/osr_map_server/: CMakeLists.txt  package.xml
osr_public_v0.5/osr_map/osr_map/osr_map_server/include/osr_map_server/: map_manager.h
osr_public_v0.5/osr_map/osr_map/osr_map_server/launch/: osr_map_server.launch  short_term_server.launch  user_defined_abnormal.launch
osr_public_v0.5/osr_map/osr_map/osr_map_server/src/: map_manager.cpp
(+159 files in other folders)
