<?xml version="1.0"?>
<package format="2">
  <name>osr_comm</name>
  <version>0.0.0</version>
  <maintainer email="kina@etri.re.kr">Kiin Na</maintainer>
  <license>BSD</license>
  <description>The osr_comm package</description>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>  
  <build_depend>boost</build_depend>  
  <export>
  </export>
</package>
