<?xml version="1.0"?>
<package>
  <name>osr_map_agents</name>
  <version>0.0.0</version>
  <description>The osr_map_agents package</description>
  <maintainer email="kina@etri.re.kr">Kiin Na</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>osr_msgs</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>
  
  
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>  
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>osr_map_comm</build_depend>  
  
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>osr_msgs</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  
  <run_depend>osr_map_comm</run_depend>  
  <export>
  </export>
</package>