<?xml version="1.0"?>
<package>
  <name>osr_map_server</name>
  <version>0.0.0</version>
  <maintainer email="kina@etri.re.kr">Kiin Na</maintainer>
  <license>BSD</license>
  <description>The osr_map_server package</description>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_cv</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>eigen</build_depend>  
  <build_depend>osr_map_comm</build_depend>  
  <build_depend>osr_msgs</build_depend>
  
  <run_depend>tinyxml</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_cv</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>osr_map_comm</run_depend>
  <run_depend>osr_msgs</run_depend>
  <export>
  </export>
</package>
