<?xml version="1.0"?>
<package>
  <name>osr_map_comm</name>
  <version>0.0.0</version>
  <maintainer email="kina@etri.re.kr">Kiin Na</maintainer>
  <license>BSD</license>
  <description>The osr_map_comm package</description>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>eigen</build_depend>  
  <build_depend>boost</build_depend>  
  <run_depend>grid_map_core</run_depend>
  <export>
  </export>
</package>