<?xml version="1.0"?>
<package>
  <name>osr_map_demos</name>
  <version>0.0.0</version>
  <description>The osr_map_demos package</description>
  <maintainer email="kina@etri.re.kr">Kiin Na</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_cv</build_depend>
  <build_depend>opencv2</build_depend>  
  
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_cv</run_depend>
  <run_depend>opencv2</run_depend>
  
  <export>
  </export>
</package>
